# spotui

./: .gitignore  Cargo.toml  DEVLOG.md  LICENSE  MERGE_PLAN.md  PLAN.md  README.md
src/: app.rs  auth.rs  cache.rs  config.rs  diag.rs  jam.rs  jam_net.rs  main.rs  spotify.rs  ui.rs
src/cookie/: cookies.rs  mod.rs  token.rs  totp.rs
src/web/: mod.rs  server.rs  tailscale.rs
web/: .gitignore  WEB_PLAN.md  documentation.md  index.html  package-lock.json  package.json  tsconfig.json  tsconfig.server.json  vite.config.ts
web/server/: index.ts
web/server/cookies/: file.ts  index.ts  paste.ts  safari.ts  types.ts
web/server/routes/: _http.ts  auth.ts  proxy.ts
web/server/spotify/: buddylist.ts  connect.ts  dealer.ts  hash.ts  headers.ts  jam.ts  lyrics.ts  me.ts  pathfinder.ts  session.ts  state.ts  token.ts  totp.ts
web/server/util/: fs.ts  runtime.ts  truncate.ts  uri.ts
web/src/: App.tsx  commands.ts  console.ts  styles.css
web/src/api/: client.ts  connect.ts  events.ts  friends.ts  jam.ts  lyrics.ts  me.ts  pathfinder.ts  spotify.ts  state.ts
web/src/auth/: auth.ts  pkce.ts
web/src/components/: ColorPicker.tsx  ControlPane.tsx  DevicePicker.tsx  FriendsOverlay.tsx  HelpOverlay.tsx  JamOverlay.tsx  LibraryPanel.tsx  LoadMoreFooter.tsx  LyricsPanel.tsx  NowPlaying.tsx  ProgressBar.tsx  QueuePanel.tsx  RightPanel.tsx  SelectedPlaylist.tsx  TransportBar.tsx
web/src/store/: library.ts  player.ts  search.ts  selection.ts  ui.ts
web/src/util/: canEdit.ts  truncate.ts
