[package]
name = "spotui"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
description = "Keyboard-first Spotify controller for the terminal."
license = "MIT"
readme = "README.md"
keywords = ["spotify", "tui", "ratatui", "terminal", "music"]
categories = ["command-line-utilities"]

[dependencies]
ratatui = "0.29"
crossterm = { version = "0.28", features = ["event-stream"] }
tokio = { version = "1", features = ["full"] }
futures = "0.3"
rspotify = { version = "0.13", default-features = false, features = ["client-reqwest", "reqwest-rustls-tls"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
directories = "5"
anyhow = "1"
webbrowser = "1"
url = "2"
urlencoding = "2"
tokio-tungstenite = { version = "0.24", default-features = false, features = ["handshake"] }
if-addrs = "0.15"
mdns-sd = "0.19"

[profile.dev]
opt-level = 1

[profile.release]
lto = "thin"
codegen-units = 1
